<resources>
    <string name="app_name">Made Up</string>
    <string name="profile">Profile</string>
    <string name="sales">Sales</string>
    <string name="products">Products</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="mail">Email</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="product_name">Arabic Name</string>
    <string name="product_name2">English Name</string>
    <string name="delete">Delete</string>
    <string name="productName">PRODUCT NAME</string>
    <string name="productPrice">Price</string>
    <string name="productDescription">Arabic Description</string>
    <string name="productDescription2">English Description</string>
    <string name="productKeyWord">Tags</string>
    <string name="productKeyWord2">English Keywords</string>
    <string name="addProduct">ADD PRODUCT</string>
    <string name="yourName">Your Name</string>
    <string name="subscripe">Subscripe</string>
    <string name="order">Order</string>
    <string name="settings">Setting</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="billNumber">Number : </string>
    <string name="billdate">Date : </string>
    <string name="billtotal">Total : </string>
    <string name="billStatus">Status : </string>
    <string name="bill">Bill</string>
    <string name="showDetails">Show Details</string>
    <string name="search">Search</string>
    <string name="receiver_info">Receiver info.</string>
    <string name="ordered_products">Ordered Products</string>
    <string name="PleaseEnterYourName">Please Enter Your Name</string>
    <string name="PleaseEnterYourEmail">Enter a valid email</string>
    <string name="PleaseEnterYourPassword">Please Enter Your Password</string>
    <string name="PleaseConfirmYourPassword">Please Confirm Your Password</string>
    <string name="PasswordDontMatch">Password dont match</string>
    <string name="Phone">Phone</string>
    <string name="coins">L.E</string>
    <string name="add">add</string>
    <string name="required">required</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="take_photo">Take Photo</string>



</resources>
