<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SharedPackage.Activity.RegisterActivity">

    <include layout="@layout/layout_background"/>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <RelativeLayout
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <RelativeLayout
                    android:layout_marginEnd="5dp"
                    android:id="@+id/l"
                    android:background="@drawable/shape_white"
                    android:layout_width="60dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_buy"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/l"
                    android:background="@drawable/shape_white"
                    android:layout_width="60dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sell_icon"/>
                </RelativeLayout>
            </RelativeLayout>



        </RelativeLayout>




 <android.support.v7.widget.CardView
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/shape_raduis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <EditText
                        android:inputType="text"
                        android:theme="@style/EditTextTheme"
                        android:textSize="14sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorwhite"
                        android:hint="@string/username"
                        android:drawableStart="@drawable/ic_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:theme="@style/EditTextTheme"
                        android:textSize="14sp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorwhite"
                        android:hint="@string/mail"
                        android:layout_marginBottom="5dp"
                        android:drawableStart="@drawable/ic_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:inputType="textPassword"
                        android:theme="@style/EditTextTheme"
                        android:textSize="14sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorwhite"
                        android:hint="@string/password"
                        android:drawableStart="@drawable/ic_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:theme="@style/EditTextTheme"
                        android:textSize="14sp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorwhite"
                        android:hint="@string/confirmpassword"
                        android:layout_marginBottom="5dp"
                        android:drawableStart="@drawable/ic_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </android.support.v7.widget.CardView>








    </LinearLayout>

    <Button
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:drawableEnd="@drawable/ic_login"
        android:textColor="@color/colorwhite"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="center"
        android:background="@drawable/shape_button"
        android:text="@string/register"
        android:layout_alignEnd="@id/P"
        android:layout_alignBottom="@id/P"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />



</RelativeLayout>