<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorwhite"
    tools:context=".HandMaker.Activity.Activity_AddProduct">






    <ScrollView

        android:layout_margin="10dp"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">





            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:background="@color/colorLightgray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        >

                        <ImageView

                            android:id="@+id/photoPicker"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_alignParentRight="true"
                            android:layout_margin="5dp"
                           android:padding="4dp"
                            android:src="@drawable/image_add_button"
                            android:background="@drawable/style_button_add_photo"
                            />

                        <ImageView
                            android:padding="4dp"
                            android:id="@+id/photoPicker2"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_alignParentRight="true"
                            android:layout_margin="5dp"
                            android:src="@drawable/image_add_button"
                            android:background="@drawable/style_button_add_photo"
                            />

                        <ImageView
                            android:padding="4dp"
                            android:id="@+id/photoPicker3"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_alignParentRight="true"
                            android:layout_margin="5dp"
                            android:src="@drawable/image_add_button"
                            android:background="@drawable/style_button_add_photo"
                            />

                        <ImageView
                            android:padding="4dp"
                            android:id="@+id/photoPicker4"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_alignParentRight="true"
                            android:layout_margin="5dp"
                            android:src="@drawable/image_add_button"
                            android:background="@drawable/style_button_add_photo"
                            />

                        <ImageView

                            android:padding="4dp"
                            android:id="@+id/photoPicker5"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_alignParentRight="true"
                            android:layout_margin="5dp"
                            android:src="@drawable/image_add_button"
                            android:background="@drawable/style_button_add_photo"
                            />

                    </LinearLayout>

                </HorizontalScrollView>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name_ar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    >

                <EditText
                    android:id="@+id/productName_ar"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/product_name"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:layout_marginTop="25dp"
                    android:theme="@style/EditTextTheme2"
                    />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"

                    >

                    <EditText
                        android:id="@+id/productName_en"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/product_name2"
                        android:singleLine="true"
                        android:textSize="20sp"
                        android:padding="8dp"
                        android:layout_marginTop="25dp"
                        android:theme="@style/EditTextTheme2"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    >
                <EditText
                    android:id="@+id/productPrice"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/productPrice"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_below="@+id/productName"
                    android:theme="@style/EditTextTheme2"
                    />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_description_ar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    >

                <EditText
                    android:id="@+id/productDesc_ar"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/productDescription"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:layout_marginTop="25dp"
                    android:theme="@style/EditTextTheme2"
                    />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_description_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    >

                    <EditText
                        android:id="@+id/productDesc_en"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/productDescription2"
                        android:singleLine="true"
                        android:textSize="20sp"
                        android:padding="8dp"
                        android:layout_marginTop="25dp"
                        android:theme="@style/EditTextTheme2"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_keywords_ar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    >

                <EditText
                    android:id="@+id/productKeyWords_ar"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/productKeyWord"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:layout_marginTop="25dp"
                    android:theme="@style/EditTextTheme2"
                    />
                </android.support.design.widget.TextInputLayout>



                <Button
                        android:id="@+id/ADD"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="30dp"
                        android:text="@string/add"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/colorwhite"
                        android:background="@drawable/shape_button_add1"
                        />

            </LinearLayout>




    </ScrollView>




</RelativeLayout>